# templates

./: .pre-commit-config.yaml  .shellcheckrc  LICENSE  command.sh
cpp/base/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt
devcontainer/: copy_to_repo.sh
devcontainer/ubuntu/: devcontainer.json
nodejs/nestjs/: .pre-commit-config.yaml  package-lock.json  package.json
nodejs/nestjs/.devcontainer/: devcontainer.dockerfile  devcontainer.json
nodejs/nestjs/src/: app.module.ts  main.ts
nodejs/nestjs/src/pet/: pet.controller.spec.ts  pet.controller.ts  pet.dto.ts  pet.module.ts  pet.service.ts
python/base/: ruff.toml
python/base/.template/: install.sh
